deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-backend
  template:
    metadata:
      labels:
        app: ecom-backend
    spec:
      containers:
      - name: ecom-backend
        image: man0jx/k8s
        ports:
        - containerPort: 3000
        volumeMounts: 
          - name: my-secret
            readOnly: true
            mountPath: "/app/config"
      volumes:
      - name: my-secret
        secret: 
          secretName: my-secret
