hostpath-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-example
spec:
  containers:
    - name: busybox-container
      image: busybox
      command: ["/bin/sh", "-c"]
      args:
        - while true; do echo "$(date) - Writing to hostPath" >> /app-data/logs.txt; sleep 5; done
      volumeMounts:
        - mountPath: "/app-data"
          name: host-storage
  volumes:
    - name: host-storage
      hostPath:
        path: "/data"
        type: DirectoryOrCreate
