initcont.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-container
spec:
  volumes:
    - name: shared-volume
      emptyDir: {}
  containers:
    - name: main-app
      image: busybox
      command: ['sh', '-c', 'cat /data/ready.txt && echo "Main App Running" && sleep infinity']
      volumeMounts:
        - name:  shared-volume
          mountPath: /data
