tain-node.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-taint
spec:
  containers:
  - name: my-container
    image: nginx
