deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment
 namespace: default
spec:
 replicas: 2
 selector:
  matchLabels:
   app: nginx
 template:
  metadata:
   labels:
    app: nginx
  spec:
   containers:
   - name: nginx
     image: nginx:alpine
     ports:
     - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 namespace: default
spec:
 selector:
  app: nginx
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
 type: NodePort
