ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: web-apps-ingress
 namespace: default
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 ingressClassName: nginx
 rules:
 - host: localhost
   http:
    paths:
    - path: /nginx
      pathType: Prefix
      backend:
       service:
        name: nginx-service
        port:
         number: 80
    - path: /apache
      pathType: Prefix
      backend:
       service:
        name: apache-service
        port:
         number: 80
